# Physx-2D

./: .gitignore  .gitmodules  .make_gmake2.sh.swo  .make_gmake2.sh.swp  .todo  CMakeLists.txt  Makefile  Physx2D.sln  README.md  build.sh  build_run.sh  configure.sh  gen_proj.sh  generateProject.bat  install.sh  make_gmake2.bat  make_gmake2.sh  make_linux.sh  premake5.lua  run.sh  setup.sh
.cache/clangd/index/: Application.cpp.BCFC73A9EA35E2D8.idx  Application.h.F4E08F92083C5DE0.idx  Buffer.cpp.2B0FC785186132CC.idx  Buffer.h.916FF7D2558B9238.idx  CA_gpu.cpp.DC51AEEDDD4720D0.idx  CA_gpu.h.9D1B3CA4C99A90DA.idx  ComputeShader.cpp.9B23A9ECA654F53C.idx  ComputeShader.h.B12EEBB94CBA9D2B.idx  Log.h.6B5C2B15664AF992.idx  MNCA.h.B5F2AF9A7FD652EB.idx  PhysicsTestApp.h.4F958223EBCACD8A.idx  WFC.cpp.2B0DA9E16E140EF4.idx  WFC.h.075BA1EF775A2285.idx  WaveFuncCollapseApp.h.9ACB9F5B9EE93C63.idx  boid.cpp.33E9E36C1462A9CE.idx  boid.h.B748EDECA609E784.idx  boid_sim.h.7604159AC9B316E4.idx  camera.cpp.F5BA599380DFABCC.idx  camera.h.9CAE51C6AF323074.idx  cellularAutomata.h.BD562AD9A509474A.idx  components.h.5D36A3A8A23A96D0.idx  context.c.8164156DF6C3908C.idx  core.h.C0DDEE08D61DF482.idx  defaults.cpp.3EAD6A4E0B9158F6.idx  defaults.h.77682E5C9E85F84F.idx  ecsmanager.h.3DAEE4B278E09E16.idx  egl_context.c.63545D5B78301780.idx  entity.cpp.2CD5DD7EE96265CB.idx  entity.h.8496BADAE59C7582.idx  framebuffer.cpp.704A495157E44CA4.idx  framebuffer.h.07B4CC47EFF549D3.idx  glad.c.4BCB38E824832450.idx  glad.h.4BAFC9603BC28023.idx  glfw3.h.09F8AC8C00DB20AB.idx  glx_context.c.1360688E18350C8C.idx  init.c.920ACE5F820D07DC.idx  input.c.0C9D602C77806116.idx  instancedRenderer.cpp.2AF34C88B961338C.idx  instancedRenderer.h.26E4A0E505772956.idx  internal.h.1B7CF9B9612B3273.idx  (+61 more)
Physx2D/: CMakeLists.txt  Makefile  Physx2D.vcxproj  Physx2D.vcxproj.filters  Physx2DConfig.h.in
Physx2D/src/: pch.h  physx2d.h
Physx2D/src/core/: Application.cpp  Application.h  Log.h  core.h  entry.h
Physx2D/src/math/: math.cpp  math.h
Physx2D/src/physics/: physics2d.cpp  physics2d.h
Physx2D/src/renderer/: Buffer.cpp  Buffer.h  framebuffer.cpp  framebuffer.h  instancedRenderer.cpp  instancedRenderer.h  renderer2D.cpp  renderer2D.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h
Physx2D/src/scene/: camera.cpp  camera.h  components.h  ecsmanager.h  entity.cpp  entity.h  world.cpp  world.h
Physx2D/src/utils/: ComputeShader.cpp  ComputeShader.h  defaults.cpp  defaults.h  quadtree.cpp  quadtree.h  time.cpp  time.h  utils.cpp  utils.h
Physx2D/src/window/: window.cpp  window.h
SandBox/: CMakeLists.txt  Makefile  SandBox.vcxproj  SandBox.vcxproj.filters
SandBox/applications/: MNCA.h  PhysicsTestApp.h  WaveFuncCollapseApp.h  boid_sim.h  cellularAutomata.h
SandBox/res/: circle.glsl  quad.glsl  vert.glsl
SandBox/res/c_shaders/: b_reaction.glsl  dla.glsl  gameoflife.glsl  mnca.glsl  ray_trace.glsl  reaction.glsl  wolfram.glsl
SandBox/res/shaders/: circle.glsl  f_frag.glsl  f_vert.glsl  quad.glsl  vert.glsl
SandBox/src/: main.cpp
SandBox/src/boids/: boid.cpp  boid.h
SandBox/src/cellular_autmata/: CA.cpp  CA_fb.cpp  CA_fb.h
SandBox/src/cellular_automata/: CA.h  CA_gpu.cpp  CA_gpu.h  mnca.cpp  mnca.h
SandBox/src/compute_shader_test/: ray_tracing.cpp  ray_tracing.h
SandBox/src/wavefcollapse/: WFC.cpp  WFC.h
